--- a/ActiveSL/Info.plist
+++ b/ActiveSL/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This would require access to picture library</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This would require access to picture library</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
